--- a/package.json
+++ b/package.json
@@ -7,16 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@fortawesome/vue-fontawesome": "^3.0.0-3",
-    "vue": "^3.0.5"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.1",
-    "@vue/compiler-sfc": "^3.0.5",
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.9",
-    "tailwindcss": "^2.0.4",
-    "vite": "^2.1.5"
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "vite": "^2.4.4"
   }
 }
