--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "react": "^17.0.0",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.0",
     "tailwindcss": "^2.2.7"
   },
