--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^17.0.0",
     "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-tsparticles": "^1.33.1",
     "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
